EZDNXTGEN-19400: Fixing align-center (#16)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,6 +31,10 @@ table {
     width: 100%;
 }
 
+.align-center {
+    text-align: center;
+}
+
 .markdown li > p {
     margin-top: 0px;
     margin-bottom: 0px;
